docs/side-nav.css
:host aside {
  font-family: Arial, Helvetica, sans-serif;
  background-color: rgba( 0, 0, 0, .9 );
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

:host aside nav {
  font-size: .875rem;
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing:  .1em;
}

::slotted(a) {
  text-decoration: none;
  transition: color .15s ease-in;
  opacity: 1;
  transition: opacity .15s ease-in;
  color: #fff;
  margin-right: 1rem;
  margin-top: 2rem;
  margin-bottom: 2rem;
}

::slotted(div.container) {
  display: table;
  width: 100%;
  position: absolute;
  z-index: 9;
  bottom: 5%;
  left: 0;
  height: 30px;
}

/*
::slotted(div.container svg) {
  margin: 1rem;
}

::slotted(div.container svg:first-child) {
  float: left;
}

::slotted(div.container svg:last-child) {
  float: right;
}
*/
/* -ns */
@media screen and (min-width: 30em) {
  :host aside {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
  ::slotted(div.container) {
    bottom: 10%;
  }
}

/* -m */
@media screen and (min-width: 30em) and (max-width: 60em) {
  :host aside {
    padding-left: 1rem;
    padding-right: 1rem;
  }
  ::slotted(div.container) {
    bottom: 10%;
  }
}

/* -l */
@media screen and (min-width: 60em) {
  :host aside {
    padding-left: 2rem; 
    padding-right: 2rem;
  }
  ::slotted(div.container) {
    bottom: 10%;
  }
}

